# app-libri-fede-backend

./: .gitignore  Cargo.toml  README.md  Rocket.toml
books.db/: 000070.sst  000073.sst  000078.sst  000083.sst  IDENTITY  MANIFEST-000085  OPTIONS-000087
src/: cors.rs  main.rs  structs.rs
src/books.db/: 000009.sst  IDENTITY  MANIFEST-000005
src/models/: book.rs
src/routes/: book.rs
