[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
surrealdb = { version = "2.3.7", features = ["kv-rocksdb"] }
tokio = { version = "1.47.1", features = ["full"] }
